# bb-test

./: BBTanks.cpp  CMakeLists.txt  README.md  plugins.cfg  resources.cfg  scratchpad.md  setup.txt
media/: sherman_firefly.scene
media/material/: sherman_firefly.material
media/mesh/: sherman_fireflyBarrel.mesh  sherman_fireflyGun.mesh  sherman_fireflySherman_Firefly.mesh  sherman_fireflyTower.mesh  sherman_fireflyTrack_L.mesh  sherman_fireflyTrack_R.mesh  sherman_fireflyWheel_L_01.mesh  sherman_fireflyWheel_L_02.mesh  sherman_fireflyWheel_L_03.mesh  sherman_fireflyWheel_L_04.mesh  sherman_fireflyWheel_L_05.mesh  sherman_fireflyWheel_L_06.mesh  sherman_fireflyWheel_L_07.mesh  sherman_fireflyWheel_L_08.mesh  sherman_fireflyWheel_R_01.mesh  sherman_fireflyWheel_R_02.mesh  sherman_fireflyWheel_R_03.mesh  sherman_fireflyWheel_R_04.mesh  sherman_fireflyWheel_R_05.mesh  sherman_fireflyWheel_R_06.mesh  sherman_fireflyWheel_R_07.mesh  sherman_fireflyWheel_R_08.mesh
share/OGRE/Media/materials/programs/: ps_glow.cg  ps_glow.glsl  vs_glow.cg  vs_glow.glsl
share/OGRE/Media/materials/scripts/: glow.material
